# ttd-mcp

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: build-windows.yml  smoke-tests.yml
crates/ttd-mcp/: Cargo.toml
crates/ttd-mcp/src/: lib.rs  main.rs  mcp.rs  server.rs  tools.rs
crates/ttd-mcp/src/ttd_replay/: mod.rs  native.rs  registry.rs  symbols.rs  types.rs
crates/ttd-mcp/tests/: mcp_stdio.rs  ping_trace.rs
crates/ttd-mcp/tests/common/: mod.rs
crates/windbg-dbgeng/: Cargo.toml
crates/windbg-dbgeng/src/: lib.rs
crates/windbg-install/: Cargo.toml
crates/windbg-install/src/: lib.rs
crates/windbg-install/tests/: metadata.rs
crates/windbg-tool/: Cargo.toml
crates/windbg-tool/src/: cli.rs  lib.rs  main.rs  pe_symbols.rs
crates/windbg-tool/src/cli/: daemon_mode.rs  dispatch.rs  output.rs  platform.rs  remote.rs
crates/windbg-tool/tests/: daemon_cli.rs  mcp_stdio.rs
crates/windbg-ttd/: Cargo.toml
crates/windbg-ttd/src/: daemon.rs  jobs.rs  lib.rs  server.rs  service.rs  state.rs  targets.rs  tools.rs
crates/windbg-ttd/src/ttd_replay/: mod.rs  native.rs  position.rs  registry.rs  symbols.rs  types.rs
crates/windbg-ttd/tests/: ping_trace.rs
crates/windbg-ttd/tests/common/: mod.rs
docs/: architecture.md  cli.md  development.md  mcp.md
native/ttd-replay-bridge/: CMakeLists.txt  packages.config  ttd_replay_bridge.cpp  ttd_replay_bridge.h
scripts/: Get-TtdReplayRuntime.ps1
xtask/: Cargo.toml
xtask/src/: main.rs
