[workspace]
members = [
    "crates/ttd-mcp",
    "xtask",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
libloading = "0.8"
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmcp = { version = "0.16.0", features = ["server", "transport-io"] }
thiserror = "1.0"
tokio = { version = "1.37", features = ["io-std", "io-util", "macros", "rt-multi-thread", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
