[workspace]
members = [
    "crates/windbg-dbgeng",
    "crates/windbg-install",
    "crates/windbg-tool",
    "crates/windbg-ttd",
    "xtask",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
bytes = "1.6"
clap = { version = "4.5", features = ["derive"] }
http-body-util = "0.1"
hyper = { version = "1.3", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["http1", "server", "tokio"] }
libloading = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
roxmltree = "0.20"
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmcp = { version = "0.16.0", features = ["server", "transport-io"] }
thiserror = "1.0"
tokio = { version = "1.37", features = ["io-std", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
windows = "0.58"
zip = { version = "2.4", default-features = false, features = ["deflate"] }
