[package]
name = "windbg-tool"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
rmcp.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
windbg-dbgeng = { path = "..\\windbg-dbgeng" }
windbg-install = { path = "..\\windbg-install" }
windbg-ttd = { path = "..\\windbg-ttd" }
