[package]
name = "windbg-ttd"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
libloading.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
rmcp.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
